Add sidebar image and header. Add placeholder styling.

--- a/index.html
+++ b/index.html
@@ -4,32 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="image-sidebar">
-
+    <div class="sidebar">
+        <img src="purple-sky.jpg">
     </div>
     <div class="form-container">
+        <div class="header">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+            Ut enim ad minim veniam, 
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </div>
         <form action="#" method="post">
-            <label for="first_name">First Name:</label>
-            <input type="text" id="first_name">
-            
-            <label for="last_name">Last Name:</label>
-            <input type="text" id="last_name">
+            <div class="input-container">
+                <div class="input-block">
+                    <label for="first_name">First Name:</label>
+                    <input type="text" id="first_name">
+                </div>
+                
+                <div class="input-block">
+                    <label for="last_name">Last Name:</label>
+                    <input type="text" id="last_name">
+                </div>
 
-            <label for="user_email">Email:</label>
-            <input type="email" id="user_email">
+                <div class="input-block">
+                    <label for="user_email">Email:</label>
+                    <input type="email" id="user_email">
+                </div>
 
-            <label for="user_phone">Phone Number:</label>
-            <input type="tel" id="user_phone">
+                <div class="input-block">
+                    <label for="user_phone">Phone Number:</label>
+                    <input type="tel" id="user_phone">
+                </div>
 
-            <label for="user_password">Password:</label>
-            <input type="password" id="user_password">
+                <div class="input-block">
+                    <label for="user_password">Password:</label>
+                    <input type="password" id="user_password">
+                </div>
 
-            <label for="confirm_password">Confirm Password:</label>
-            <input type="password" id="confirm_password">
-
-            <button type="submit">Sign Up</button>
+                <div class="input-block">
+                    <label for="confirm_password">Confirm Password:</label>
+                    <input type="password" id="confirm_password">
+                </div>
+            </div>
+            <div class="footer">
+                <button type="submit">Sign Up</button>
+            </div>
         </form>
     </div>
 </body>
