Add form heading and styling

--- a/index.html
+++ b/index.html
@@ -15,39 +15,40 @@
         <div class="header">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-            Ut enim ad minim veniam, 
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         </div>
         <form action="#" method="post">
-            <div class="input-container">
-                <div class="input-block">
-                    <label for="first_name">First Name:</label>
-                    <input type="text" id="first_name">
-                </div>
-                
-                <div class="input-block">
-                    <label for="last_name">Last Name:</label>
-                    <input type="text" id="last_name">
-                </div>
+            <div class="middle">
+                <h1>Let's do this!</h1>
+                <div class="input-container">
+                    <div class="input-block">
+                        <label for="first_name">First Name:</label>
+                        <input type="text" id="first_name">
+                    </div>
+                    
+                    <div class="input-block">
+                        <label for="last_name">Last Name:</label>
+                        <input type="text" id="last_name">
+                    </div>
 
-                <div class="input-block">
-                    <label for="user_email">Email:</label>
-                    <input type="email" id="user_email">
-                </div>
+                    <div class="input-block">
+                        <label for="user_email">Email:</label>
+                        <input type="email" id="user_email">
+                    </div>
 
-                <div class="input-block">
-                    <label for="user_phone">Phone Number:</label>
-                    <input type="tel" id="user_phone">
-                </div>
+                    <div class="input-block">
+                        <label for="user_phone">Phone Number:</label>
+                        <input type="tel" id="user_phone">
+                    </div>
 
-                <div class="input-block">
-                    <label for="user_password">Password:</label>
-                    <input type="password" id="user_password">
-                </div>
+                    <div class="input-block">
+                        <label for="user_password">Password:</label>
+                        <input type="password" id="user_password">
+                    </div>
 
-                <div class="input-block">
-                    <label for="confirm_password">Confirm Password:</label>
-                    <input type="password" id="confirm_password">
+                    <div class="input-block">
+                        <label for="confirm_password">Confirm Password:</label>
+                        <input type="password" id="confirm_password">
+                    </div>
                 </div>
             </div>
             <div class="footer">
