Fix form layout and change styling

--- a/index.html
+++ b/index.html
@@ -9,44 +9,45 @@
 <body>
     <div class="sidebar">
         <img src="purple-sky.jpg">
-        <p id="credit">Photo by eberhardgross on Unsplash</p>
+        <p id="credit">Photo from <a href="https://unsplash.com/@eberhardgross">Unsplash</a></p>
     </div>
     <div class="form-container">
         <div class="header">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+            Do you stand proud because you are strong or are you strong because you'd win? 
+            With this treasure you can summon your greatest dreams. 
+            <br><br>
+            Sign up now.
         </div>
         <form action="#" method="post">
             <div class="middle">
                 <h1>Let's do this!</h1>
                 <div class="input-container">
                     <div class="input-block">
-                        <label for="first_name">First Name:</label>
+                        <label for="first_name">FIRST NAME</label>
                         <input type="text" id="first_name">
-                    </div>
-                    
+                    </div> 
                     <div class="input-block">
-                        <label for="last_name">Last Name:</label>
+                        <label for="last_name">LAST NAME</label>
                         <input type="text" id="last_name">
                     </div>
 
                     <div class="input-block">
-                        <label for="user_email">Email:</label>
+                        <label for="user_email">EMAIL</label>
                         <input type="email" id="user_email">
                     </div>
 
                     <div class="input-block">
-                        <label for="user_phone">Phone Number:</label>
+                        <label for="user_phone">PHONE NUMBER</label>
                         <input type="tel" id="user_phone">
                     </div>
 
                     <div class="input-block">
-                        <label for="user_password">Password:</label>
+                        <label for="user_password">PASSWORD</label>
                         <input type="password" id="user_password">
                     </div>
 
                     <div class="input-block">
-                        <label for="confirm_password">Confirm Password:</label>
+                        <label for="confirm_password">CONFIRM PASSWORD</label>
                         <input type="password" id="confirm_password">
                     </div>
                 </div>
