--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="sidebar">
         <img src="purple-sky.jpg">
+        <div id="logo">GROUP</div>
         <p id="credit">Photo from <a href="https://unsplash.com/@eberhardgross">Unsplash</a></p>
     </div>
     <div class="form-container">
@@ -24,36 +25,37 @@
                 <div class="input-container">
                     <div class="input-block">
                         <label for="first_name">FIRST NAME</label>
-                        <input type="text" id="first_name">
+                        <input required type="text" id="first_name">
                     </div> 
                     <div class="input-block">
                         <label for="last_name">LAST NAME</label>
-                        <input type="text" id="last_name">
+                        <input required type="text" id="last_name">
                     </div>
 
                     <div class="input-block">
                         <label for="user_email">EMAIL</label>
-                        <input type="email" id="user_email">
+                        <input required type="email" id="user_email">
                     </div>
 
                     <div class="input-block">
                         <label for="user_phone">PHONE NUMBER</label>
-                        <input type="tel" id="user_phone">
+                        <input required type="tel" id="user_phone" pattern="[0-9]{3}-?[0-9]{3}-?[0-9]{4}">
                     </div>
 
                     <div class="input-block">
                         <label for="user_password">PASSWORD</label>
-                        <input type="password" id="user_password">
+                        <input required type="password" id="user_password">
                     </div>
 
                     <div class="input-block">
                         <label for="confirm_password">CONFIRM PASSWORD</label>
-                        <input type="password" id="confirm_password">
+                        <input required type="password" id="confirm_password">
                     </div>
                 </div>
             </div>
             <div class="footer">
                 <button type="submit">Sign Up</button>
+                <div id="login">Already have an account? <a id="login-link" href="#">Log in</a>
             </div>
         </form>
     </div>
@@ -70,6 +72,8 @@
             <feBlend in="SourceGraphic" in2="monoNoise" mode="screen" />
         </filter>
     </svg>
+
+    <script src="script.js"></script>
 
 </body>
 </html>
